--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 image = "0.24.6"
-threadpool = { git = "https://github.com/BWbwchen/threadpool.git" }
+threadpool = { git = "https://github.com/BWbwchen/threadpool.git", rev = "d563151c87e563b139cf8cbb6048c4eed75e183e"}
 
 [dev-dependencies]
 criterion = "0.5.1"
